Refactored unit tests for SummonedElementBank and MagicFactory.