@@ -12,6 +12,10 @@ public class SummonedElementBankTest {
     @Before
     public void setUp() {
         elementBank = new SummonedElementBank(4);
+
+        elementBank.add(Element.FIRE);
+        elementBank.add(Element.WATER);
+        elementBank.add(Element.WOOD);
     }
 
     @Test
@@ -21,22 +25,18 @@ public class SummonedElementBankTest {
 
     @Test
     public void getCurrentSize_WithCorrectNumberOfElements() {
-        addThreeElementsToBank();
-
         assertThat(elementBank.getCurrentSize()).isEqualTo(3);
     }
 
     @Test
-    public void add_WithCorrectElement() {
-        addThreeElementsToBank();
-
-        assertThat(elementBank.elementList.get(0)).isEqualTo(Element.FIRE);
+    public void add_BankContainsCorrectElements() {
+        assertThat(elementBank.getFirst()).isEqualTo(Element.FIRE);
+        assertThat(elementBank.getSecond()).isEqualTo(Element.WATER);
+        assertThat(elementBank.getLast()).isEqualTo(Element.WOOD);
     }
 
     @Test
-    public void add_WhenBankIsFull() {
-        addThreeElementsToBank();
-
+    public void addWhenBankIsFull_ExceptionThrown() {
         assertThatThrownBy(() -> {
             elementBank.add(Element.FIRE);
             elementBank.add(Element.WATER);
@@ -44,45 +44,16 @@ public class SummonedElementBankTest {
     }
 
     @Test
-    public void clear() {
-        addThreeElementsToBank();
+    public void clear_ExceptionThrownWhileGetFirst() {
         elementBank.clear();
 
-        assertThat(elementBank.elementList).isEmpty();
-    }
-
-    @Test
-    public void getFirst_WithCorrectElement() {
-        addThreeElementsToBank();
-
-        assertThat(elementBank.getFirst()).isEqualTo(Element.FIRE);
-    }
-
-    @Test
-    public void getSecond_WithCorrectElement() {
-        addThreeElementsToBank();
-
-        assertThat(elementBank.getSecond()).isEqualTo(Element.WATER);
-    }
-
-    @Test
-    public void getLast_WithCorrectElement() {
-        addThreeElementsToBank();
-
-        assertThat(elementBank.getLast()).isEqualTo(Element.WOOD);
+        assertThatThrownBy(() -> elementBank.getFirst()).isInstanceOf(IndexOutOfBoundsException.class);
     }
 
     @Test
     public void getElementLevelCount_WithCorrectNumber() {
-        addThreeElementsToBank();
         elementBank.add(Element.FIRE);
 
         assertThat(elementBank.getElementLevelCount(Element.FIRE)).isEqualTo(1);
-    }
-
-    private void addThreeElementsToBank() {
-        elementBank.add(Element.FIRE);
-        elementBank.add(Element.WATER);
-        elementBank.add(Element.WOOD);
     }
 }
